--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="websmirno.site" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Center for speech therapy</title>
+    <title>Center for speech therapy test</title>
     <!-- Stylesheets -->
     <link href="assets/vendor/slick/slick.css" rel="stylesheet" />
     <link href="assets/vendor/animate/animate.min.css" rel="stylesheet" />
